ビルドPOM修正

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>1.8</java.version>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+    <maven.compiler.source>${java.version}</maven.compiler.source>
   </properties>
 
   <dependencies>
@@ -29,4 +32,37 @@
       <version>3.8.1</version>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <!-- 実行可能jarファイル用のプラグイン -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <finalName>test</finalName>
+          <descriptorRefs>
+            <!-- 依存するリソースをすべてjarに同梱する -->
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+            <manifest>
+              <mainClass>jp.co.tecinfosys.L191_ERFileCreateSqlTool.App</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+        <executions>
+          <execution>
+            <!-- idタグは任意の文字列であれば何でもよい -->
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
